# QtProjects

AudioPlayExample/: AudioPlayExample.pro  audiodraw.cpp  audiodraw.h  audioplay.cpp  audioplay.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  qcustomplot.cpp  qcustomplot.h
QCustomPlot/qcustomplot/examples/build-plot-examples-Desktop_Qt_5_13_0_MinGW_32_bit-Debug/: Makefile  Makefile.Debug  Makefile.Release  ui_mainwindow.h
QCustomPlot/qcustomplot/examples/build-plot-examples-Desktop_Qt_5_13_0_MinGW_32_bit-Debug/debug/: moc_mainwindow.cpp  moc_qcustomplot.cpp
QCustomPlot/qcustomplot/examples/plots/: mainwindow.cpp
qaudioplayer-0.3/: AUTHORS  ChangeLog  Doxyfile  Makefile.in  NEWS  README  configure  configure.in  configure.in.in  qaudioplayer.kdevelop  qaudioplayer.kdevelop.pcs  qaudioplayer.kdevses
qaudioplayer-0.3/admin/: am_edit
qaudioplayer-0.3/admin/CVS/: Entries  Repository  Root
qaudioplayer-0.3/po/: Makefile.in  de.gmo  de.po  qaudioplayer.pot
qaudioplayer-0.3/src/: Makefile.am  Makefile.in  main.cpp  qaudiodg.cpp  qaudiodg.ui  qaudiodg.ui.h  qaudiodg2.cpp  qaudiodg2.h  qaudioplayer.cpp  qaudioplayer.desktop  qaudioplayer.h  qaudioplayer.lsm  qaudioplayer.q  qaudioplayerui.rc  qinterp.cpp  qinterp.h
untitled/: mainwindow.ui  untitled.pro
